@@ -1,3 +1,12 @@
+2023-08-06T00:49:37Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5773674145 # 1793
+* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-06
+* notice: last 14d: unq all: 33 71
+* notice: prev accum: outdated-unq outdated-all / unq all: 999 2626 / 1036 2687
+* notice: next accum: outdated-unq outdated-all / unq all: 1000 2628 / 1042 2699
+* notice: prev exec diff / last date diff / accum: unq all: +6 +12 -0 -0 / +23 +40 -0 -0 / 23 40
+* notice: removed / changed dates: [2023-07-22] / [2023-08-05]
+
 2023-08-05T16:10:57Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5771622467 # 1792
 * notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-05
